# wordcount

./: CMakeLists.txt  a.out  main.c  main_fp.c  package.json
